# 3D-Engine

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.bak
GameEngineCore/: CMakeLists.txt  CMakeLists.txt.bak
GameEngineCore/assets/models/box/source/: Sketchfab_2022_09_21_03_35_41.blend
GameEngineCore/assets/models/building2/Apartment building/: Apartment building.dae
GameEngineCore/assets/models/lampost/: lampost.blend
GameEngineCore/assets/models/lampost/source/untitled/: untitled.blend1
GameEngineCore/assets/models/paimon/: o5131fbilmlm.mtl
GameEngineCore/assets/models/raiden-shogun-genshin-impact/: raiden_shogun.fbx
GameEngineCore/assets/models/rifle/: rifle.fbx
GameEngineCore/assets/models/sign/: french-sign-highway.mtl  sign.fbx
GameEngineCore/assets/models/sign/sign/: french-sign-highway.dae  french-sign-highway.x3d
GameEngineCore/assets/models/sign/source/: french-sign-highway v2.rar
GameEngineCore/assets/models/teascroll-clubhouse-empty-room/source/: Prop_Modular_Room.fbx
GameEngineCore/includes/GameEngineCore/: Application.hpp  Enums.hpp  Event.hpp  InterfaceManager.hpp  Log.hpp  ObjectManager.hpp  Renderer.hpp  Scene.hpp  ShaderManager.hpp  TransformManager.hpp  Vertex.hpp
GameEngineCore/includes/GameEngineCore/Utils/: test.hpp
GameEngineCore/shaders/: ActiveVerticesShader.frag  ActiveVerticesShader.vs  ComplexLightShader.frag  ContainerShader.frag  ContainerShader.vs  LightingShader.frag  LightingShader.vs  LightingTextureShader.frag  ModelLoadingShader.vs  SimpleDepthShader.vs  SimpleShader.frag  SimpleShader.vs  SunShader.frag  SunShader.vs  TerrainShader.vs
GameEngineCore/src/GameEngineCore/: Application.cpp  InterfaceManager.cpp  TransformManager.cpp  Window.cpp  Window.hpp
GameEngineCore/src/GameEngineCore/Rendering/OpenGL/: AssimpGLMHelpers.hpp  Bone.cpp  Bone.hpp  BoneInfo.hpp  Camera.cpp  Camera.hpp  CameraObject.cpp  CameraObject.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  ObjectManager.cpp  ObjectManager.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  ShaderManager.cpp  ShaderManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Terrain.cpp  Terrain.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
GameEngineCore/src/GameEngineCore/Utils/: test.cpp
GameEngineEditor/: CMakeLists.txt  CMakeLists.txt.bak
GameEngineEditor/src/: main.cpp
